--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Auto Repair Shop</title>
 	<link href="../../stylesheets/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../stylesheets/app.css" rel="stylesheet" />
 	<script src="../../javascripts/jquery-1.10.2.min.js"></script>
 	<script src="../../javascripts/bootstrap.min.js"></script>  
 </head>
@@ -19,19 +21,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#">Auto Repair Shop</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="/login">Login</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Product <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/viewProduct">View Product</a></li>
             <li><a href="/createProduct">Create Product</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Appointment <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/appointment/viewAppointment">View Appointment</a></li>
+            <li><a href="/appointment/createAppointment">Create Appointment</a></li>
           </ul>
         </li>
       </ul>
@@ -48,6 +57,7 @@
           <ul class="dropdown-menu">
             <li><a href="/createProductCategory">Create Product Category</a></li>
             <li><a href="/viewProductCategory">View Product Category</a></li>
+            <li><a href="/login">Passport Login</a></li>
           </ul>          
         </li>
       </ul>
