--- a/views/productCategoryGrid.ejs
+++ b/views/productCategoryGrid.ejs
@@ -1,4 +1,5 @@
-﻿<table
+﻿<div class='table-scrollable'>
+<table
        data-ng-show="productCategories.length > 0"
        class="table table-striped table-hover">
   <tr class="success">
@@ -30,3 +31,4 @@
     </td>
   </tr>
 </table>
+</div>
