--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,6 +9,7 @@
     <link href="../../stylesheets/app.css" rel="stylesheet" />
 	<script src="../../javascripts/jquery-1.10.2.min.js"></script>
 	<script src="../../javascripts/bootstrap.min.js"></script>  
+    <reference path="/typings/node.d.ts" />
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -27,7 +28,6 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="/login">Login</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Product <span class="caret"></span></a>
