--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,116 @@
 ﻿<% include layout %>
+<div class="col-xs-12 col-centered col-min"><div class="item"><div class="content">
 <div class="container">
 
-    <div class="jumbotron text-center">
-        <h1><span class="fa fa-lock"></span> Node Authentication</h1>
+    <div class="jumbotron text-center" style="border-bottom: 0;">
+        <h1><span class="fa fa-lock"></span> Angel's Auto Repair Shop</h1>
 
-        <p>Login or Register with:</p>
-
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span> Local Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span> Local Signup</a>
+        <p>CALL TODAY TO SCHEDULE AN APPOINTMENT!
+			<br />
+410.864.4731
+5937 BELAIR ROAD
+BALTIMORE, MD 21206</p>
     </div>
+	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    <!-- Indicators -->
+	    <ol class="carousel-indicators">
+	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	      <li data-target="#myCarousel" data-slide-to="1"></li>
+	      <li data-target="#myCarousel" data-slide-to="2"></li>
+	      <li data-target="#myCarousel" data-slide-to="3"></li>
+	    </ol>
 
-</div>
+	    <!-- Wrapper for slides -->
+	    <div class="carousel-inner" role="listbox">
+	      <div class="item active">
+	        <img src="../../images/img-bmw.jpg" alt="BMW" width="460" height="200">
+	      </div>
+
+	      <div class="item">
+	        <img src="../../images/img-porsche.jpg" alt="Porsche Cayenne" width="460" height="200">
+	      </div>
+    
+	      <div class="item">
+	        <img src="../../images/img-mercedez.jpg" alt="Mercedes Benz" width="460" height="200">
+	      </div>
+
+	      <div class="item">
+	        <img src="../../images/img-lexus.jpg" alt="Lexus" width="460" height="200">
+	      </div>
+	    </div>
+
+	    <!-- Left and right controls -->
+	    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	      <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	      <span class="sr-only">Next</span>
+	    </a>
+	  </div>
+	</div>
+	<div class="container">
+		<div class="well">
+			<div class="row">
+				<div class="col-xs-12 col-sm-9">
+		<h1>Vehicles Maintenance and Repairs</h1>
+		<p>Almost everyone has to fix their car, truck, sports utility vehicle and
+			 van at some point in their ownership of them. Most people want fast, reliable
+			 service to their vehicle because they can&rsquo;t live without a car for long.</p>
+		<p>At Auto Repair Shop we understand the need to have your car back soon. We understand
+			 the emotions you will endure during the process. Will my car be fixed
+			 to my satisfaction? Will it run as well as it did before the malfunction?
+			 Have I chosen the right repair company? Am I getting a fair deal? We made
+			 a pledge that the customer always comes first. We are here to answer all
+			 these questions about your automobile. We understand the need for a car
+			 service shop to be thorough, honest and customer-oriented. At EuroTech,
+			 our professionals will work with you to make your car run as good as new.
+			 We handle all repairs from preventative maintenance to major engine or
+			 transmission work.</p>
+		<p>Our car center repair specialists will fix all necessary repairs. We specialize
+			 in servicing European vehicles and have a profound knowledge of complex
+			 electrical, mechanical and computer systems of Audi, BMW, Jaguar, Land
+			 Rover, Mercedes Benz, Porsche, Volvo and Volkswagen. We will keep your
+			 car running smoothly through maintenance or fix the problems you may be
+			 experiencing. We fix trucks, sports utility vehicles, cars and vans.</p>
+		<h4>Local experience counts.</h4>
+		<p>We know that you don&rsquo;t know what company to choose. We know that
+			 not all car service companies care about their customers. We know some
+			 are interested in fixing the car and their bottom line. Not us. EuroTech
+			 is known throughout Baltimore for how much we care about our customers
+			 and their automobiles. We offer superior service, integrity and honesty
+			 when dealing with you the customer. We take care with each vehicle and
+			 make the repairs the best, as if we were repairing our cars. Our customers
+			 don&rsquo;t have to worry about the service they receive from us.</p>
+		<h4>One-Stop Shop</h4>
+		<p>We are happy to handle all your car repair needs from everyday preventive
+			 maintenance to the most difficult repairs necessary. We will repair engines,
+			 transmissions, air conditioners and heating systems, electrical and electronic
+			 systems, brakes, differentials and other repairs as needed. We are also
+			 a licensed state inspection facility.</p>
+		<p>To schedule an appointment, please call Auto Repair Shop at 410-325-6600</p>
+	</div>
+	<div class="col-xs-12 col-sm-3 blue-bg-side-div">
+		<h2>Why Choose Us?</h2>
+			<ul>
+				<li>Over 25 Years of Experience</li>
+				<li>Free Estimates Available</li>
+				<li>Excellent Customer Service</li>
+				<li>Specializes in European Vehicle Service</li>
+			</ul>
+		</div>
+	<div class="col-xs-12 col-sm-3">&nbsp;</div>	
+	<div class="col-xs-12 col-sm-3 blue-bg-side-div">
+		<h2>Schedule now!</h2>
+		<p style="text-align: center;">Call Auto Repair Shop <br />at 410-325-6600<br />
+		OR<br />
+		Click here to schedule <a href="/appointment/scheduleAppointment">online</a></p>
+	</div>
+	</div>
+	</div>
+	</div>
+	
+
+</div></div></div>
+<% include footer %>
