--- a/views/appointment/scheduleAppointment.ejs
+++ b/views/appointment/scheduleAppointment.ejs
@@ -1,6 +1,6 @@
 <% include ../layout %>
 
-<div class="panel panel-info">
+<div class="panel panel-info" style="min-height: 600px;">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
     <% if (user) { %>
     <a href="/logout" class="btn btn-default btn-sm">Logout</a>
@@ -68,7 +68,7 @@
     <br />
   </div>
 </div>
-
+<% include ../footer %>
 <link href="../../bower_components/angular-bootstrap-calendar/dist/css/angular-bootstrap-calendar.min.css" rel="stylesheet">
 <script src="../../bower_components/moment/min/moment.min.js" type="text/javascript"></script>
 <script src="../../bower_components/angular/angular.min.js" type="text/javascript"></script>
