--- a/views/ejsTemplate.ejs
+++ b/views/ejsTemplate.ejs
@@ -1,4 +1,4 @@
-<% include layout %>
+<% include ../layout %>
 
 <div class="panel panel-info">
 	
@@ -29,4 +29,3 @@
   </div>
   
 </div>
-<% include footer %>
