--- a/views/appointment/scheduleAppointment.ejs
+++ b/views/appointment/scheduleAppointment.ejs
@@ -21,7 +21,7 @@
       <div class="row">
         
         
-        
+        <center>
         <multi-step-container steps="steps" class="simple-prev-next"  search-id="'step'" on-cancel="cancel()" on-finish="finish()">
             <div class="col-xs-12 col-sm-6">
             <header>
@@ -60,7 +60,7 @@
 
 
         </multi-step-container>
-        
+	</center>
 
         
       </div>
