--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -14,7 +14,7 @@
 	bottom: 0;
 	width: 100%;
 	/* Set the fixed height of the footer here */
-	height: 60px;
+	//height: 60px;
   	background-color: #3a3f44;
 }
 .container .text-muted {
@@ -59,5 +59,5 @@ body > .container {
 	background-color: blue;
 }
 .panel-body {
-	min-height: 600px;
+	min-height: 500px;
 }
