--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,6 +16,7 @@
   </div>
   
   <div class="panel-body">
+    <div class="col-xs-12 col-centered col-min">
 	  
     <div class="container">
 
@@ -23,6 +24,8 @@
     <% if (typeof message != "undefined" && message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
+    
+    <p> HELLO </p>
 
   	</div>
 	
