--- a/views/appointment/scheduleStep2.ejs
+++ b/views/appointment/scheduleStep2.ejs
@@ -5,13 +5,13 @@
   <h3>Select Date and Time</h3>
   <div class="form-group" data-ng-cloak>
       Date:
-      <select id="date" data-ng-model="appointment.date" ng-options="date | date:'fullDate' for date in dates">
+      <select class="form-control input-sm" id="date" data-ng-model="appointment.date" ng-options="date | date:'fullDate' for date in dates">
           <option value=''>Select</option>
       </select>
   </div>
   <div class="form-group" data-ng-cloak>
       Time:
-      <select id="time" ng-disabled="!appointment.date" data-ng-model="appointment.time" ng-options="time | time for time in times">
+      <select class="form-control input-sm" id="time" ng-disabled="!appointment.date" data-ng-model="appointment.time" ng-options="time | time for time in times">
           <option value=''>Select</option>
       </select>
   </div>
