--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,12 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Auto Repair Shop</title>
-	<link href="../../stylesheets/bootstrap.min.css" rel="stylesheet" />
+	  <link href="../../stylesheets/bootstrap.min.css" rel="stylesheet" />
     <link href="../../stylesheets/app.css" rel="stylesheet" />
+	  <link href="../../stylesheets/font-awesome-4.6.1/css/font-awesome.min.css" rel="stylesheet" />
     
 	  <script src="../../javascripts/jquery-1.10.2.min.js"></script>
 	  <script src="../../javascripts/bootstrap.min.js"></script>
