added more codebase for crm view

--- a/views/appointment/scheduleAppointment.ejs
+++ b/views/appointment/scheduleAppointment.ejs
@@ -11,7 +11,7 @@
   <div class="clear"></div>
 
   <div class="panel-heading">
-    <h3 class="panel-title"><%=title %></h3>
+    <h3 class="panel-title"><span class="fa fa-calendar"> <%=title %></h3>
   </div>
   
 
