--- a/views/crm/profile/edit.ejs
+++ b/views/crm/profile/edit.ejs
@@ -25,7 +25,7 @@
         <div class="alert alert-success" ng-show="message" ng-cloak>{{message}}</div>
         <div class="alert alert-danger" ng-show="error" ng-cloak>{{error}}</div>
 
-      <form class="navbar-form navbar-left" role="search"
+      <form class="navbar-form navbar-left" 
             method="POST"
             name="formProfile">
 
