--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,12 @@
 <div class="container">
 
     <div class="jumbotron text-center" style="border-bottom: 0;">
-        <h1><span class="fa fa-lock"></span> Angel's Auto Repair Shop</h1>
+        <h1><span class="fa fa-car"></span> Angel's Auto Repair Shop</h1>
 
         <p>CALL TODAY TO SCHEDULE AN APPOINTMENT!
 			<br />
-410.864.4731
-5937 BELAIR ROAD
+<span class="fa fa-phone"> 410.864.4731 <br>
+<span class="fa fa-map-marker"> 5937 BELAIR ROAD
 BALTIMORE, MD 21206</p>
     </div>
 	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
