--- a/views/profile/vehicles.ejs
+++ b/views/profile/vehicles.ejs
@@ -17,7 +17,7 @@
 
         <div class="col-sm-12">
     <div class="well">
-        <h3><span class="fa fa-user"></span> Vehicles</h3>
+        <h3><span class="fa fa-automobile"></span> Vehicles</h3>
 		<div class='table-scrollable' style="max-height: 500px;">
 			<table
 			       data-ng-show="vehicles.length > 0"
