--- a/views/crm/index.ejs
+++ b/views/crm/index.ejs
@@ -14,7 +14,7 @@
     <% } %>
     
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Welcome <%= user.first_name %></h1>
+        <h1><span class="fa fa-home"></span> Welcome <%= user.first_name %></h1>
         <p class="intro">Today is <%= today %></p>
     </div>
     <div class="row " style="min-height: 500px;">
@@ -22,41 +22,41 @@
         <div class="col-lg-12 text-center">
             <div class="text-center">
             <span style="padding:20px;"><a href="/crm/appointments/today" class="btn btn-sq-lg btn-warning">
-                    <i class="fa fa-user fa-5x"></i>
+                    <i class="fa fa-calendar fa-5x"></i>
                     <br/><br/>
                 Today's <br>Appointment
             </a></span>
             <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+              <i class="fa fa-hourglass-start fa-5x"></i><br/><br/>
               Process <br>
               Walk In
             </a></span>
             <span style="padding:20px;"><a href="/crm/appointments/schedule" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+              <i class="fa fa-calendar-plus-o fa-5x"></i><br/><br/>
               Schedule <br>Appointment
             </a></span>
-            <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+            <span style="padding:20px;"><a href="/crm/services/today" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-wrench fa-5x"></i><br/><br/>
               Today's <br>Service Schedule
             </a></span>
             </div>
             <br />
           <div>
             <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
-                    <i class="fa fa-user fa-5x"></i>
+                    <i class="fa fa-search fa-5x"></i>
                     <br/><br/>
                 Customer <br>Lookup
             </a></span>
             <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+              <i class="fa fa-users fa-5x"></i><br/><br/>
               Account <br>Lookup
             </a></span>
             <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+              <i class="fa fa-calculator fa-5x"></i><br/><br/>
               Service Estimator<br>Tool
             </a></span>
             <span style="padding:20px;"><a href="/crm/profile/index" class="btn btn-sq-lg btn-warning">
-              <i class="fa fa-user fa-5x"></i><br/><br/>
+              <i class="fa fa-gear fa-5x"></i><br/><br/>
               View <br>Profile
             </a></span>
             </div>
