--- a/views/hoursandmap.ejs
+++ b/views/hoursandmap.ejs
@@ -26,7 +26,7 @@
 
 			<div class="row">
 				<div class="col-md-6">
-					<h3>Hours of Operation</h3>
+					<h3><span class="fa fa-clock-o"></span> Hours of Operation</h3>
 					<br />
 					<p>Monday: 8:00 am - 6:00 pm</p>
 					<p>Tuesday: 8:00 am - 6:00 pm</p> 
@@ -38,7 +38,7 @@
 				</div>
 
 				<div class="col-md-6">
-					<h3>Maps</h3>
+					<h3><span class="fa fa-map">  Maps</h3>
 					<br />
 					<iframe width="500" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLX2exqIPyIkRXmWz1aR-K6I&key=AIzaSyCc-O4BAlkPlieOJYfB2ovpHxEMu27ajPA" allowfullscreen></iframe>
 				</div>
