--- a/views/profile/appointmentHistory.ejs
+++ b/views/profile/appointmentHistory.ejs
@@ -18,7 +18,7 @@
 
 <div class="col-sm-12">
     <div class="well">
-        <h3><span class="fa fa-user"></span> Appointments</h3>
+        <h3><span class="fa fa-calendar"></span> Appointments</h3>
 		<div class='table-scrollable' style="max-height: 600px;">
 			<table
 			       data-ng-show="appointments.length > 0"
