--- a/views/profile/serviceHistory.ejs
+++ b/views/profile/serviceHistory.ejs
@@ -18,7 +18,7 @@
 
         <div class="col-sm-12">
     <div class="well">
-        <h3><span class="fa fa-user"></span> Service History</h3>
+        <h3><span class="fa fa-history"></span> Service History</h3>
 		<div class='table-scrollable' style="max-height: 500px;">
 			<table
 			       data-ng-show="services.length > 0"
