--- a/views/service/index.ejs
+++ b/views/service/index.ejs
@@ -12,7 +12,7 @@
   <div class="clear"></div>
   
   <div class="panel-heading">
-    <h3 class="panel-title"><%=title %></h3>
+    <h3 class="panel-title"><span class="fa fa-wrench"> <%=title %></h3>
   </div>
   
   <div class="panel-body" data-ng-app="serviceModule">
